--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,13 @@
 body {
-  background: peachpuff;
+  background: snow;
+  /*padding: 0.7em;*/
+  
 }
 .body-wrap {
   display: flex;
   flex-direction: row;
+  box-shadow: 2px 2px 2px 4px rgb(0, 0, 0, 0.15);
+  margin: 0.7em;
 }
 .wrapper {
   display: flex;
@@ -11,6 +15,7 @@ body {
   border: 1px solid white;
   margin: 0;
   width: 100%;
+  background: lightsteelblue;
 }
 .header_wrap {
   /*border: 1px solid black;*/
@@ -18,6 +23,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   font-family: 'Hobo Std';
+  
 }
 .header-text {
   font-family: 'Zapfino';
@@ -38,9 +44,9 @@ body {
 .MainContent {
   height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  background: plum;
+  background: lightskyblue;
 }
 .menu {
   /*overflow: hidden;*/
@@ -52,6 +58,7 @@ body {
   flex-direction: row;
   width: 100px;
   transition: all .3s;
+  background: lightcyan;
 }
 
 .hidden-menu {
@@ -75,4 +82,43 @@ li {
   top: 0;
   left: 0;
   transform: translateX(-100%);
+}
+.footer {
+  height: 10em;
+  background-color: lightslategray;
+  justify-content: space-between;
+  
+}
+.footer-menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 4em;
+}
+.contact-me {
+  display: flex;
+  /*flex-direction: column;*/
+  align-items: center;
+    width: 20em;
+    justify-content: space-between;
+}
+.socials {
+  display: flex;
+  justify-content: space-between;
+  width: 10em;
+  align-items: center;
+}
+.image-block {
+  /*width: 100px;
+  height: 100px;*/
+  /*overflow: hidden*/
+   position:relative;
+    overflow:auto;
+    background: red;
+    margin: 0;
+    padding: 0;
+}
+img {
+  margin: 10px;
+  padding: 0;
 }
